# cbc-dbmanager

./: .gitignore  LICENSE  README.md  example.env  requirements.txt  setup.cfg  setup.py
app/: __inti__.py  main.py
cbcdb/: __init__.py  __inti__.py  configuration_service.py  main.py
tests/: docker-compose.yml  docker_test_setup.py  test_db_manager.py
