[metadata]
name = cbcdb
version = 1.0.14
author = Cold Bore Capital
author_email = it-group@coldborecapital.com
home_page = https://github.com/Cold-Bore-Capital/cbc-dbmanager
description = A package to help facilitate postgres and Redshift database communication over SSH.
classifiers =
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 5 - Production/Stable

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7.1
packages = find:
setup_requires =
    setuptools
install_requires =
    psycopg2-binary>=2.8
    sshtunnel>=0.4.0
    pandas>=1.2
    python-dotenv>=0.19.2
tests_require =
    psycopg2-binary>=2.8
    sshtunnel>=0.4.0
    pandas>=1.2

;[options.packages.find]
;include = cbcdb, cbcdb.*, cbcdb.main
;where = cbcdb
