[metadata]
name = cbcdb
version = 1.0.20
author = Cold Bore Capital
author_email = it-group@coldborecapital.com
home_page = https://github.com/Cold-Bore-Capital/cbc-dbmanager
description = A package to help facilitate postgres and Redshift database communication over SSH.
classifiers =
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 5 - Production/Stable

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
packages = find:
setup_requires =
    setuptools
install_requires =
    psycopg2-binary>=2.8
    sshtunnel>=0.4.0
    pandas>=1.1
    python-dotenv>=0.19.2
    configservice==0.0.18
tests_require =
    psycopg2-binary>=2.8
    sshtunnel>=0.4.0
    pandas>=1.1

;[options.packages.find]
;include = cbcdb, cbcdb.*, cbcdb.main
;where = cbcdb
