[metadata]
name = cbcdb
version = 1.3.2
author = Cold Bore Capital
author_email = it-group@coldborecapital.com
home_page = https://github.com/Cold-Bore-Capital/cbc-dbmanager
description = A package to help facilitate postgres and Redshift database communication over SSH.
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 5 - Production/Stable

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
packages = find:
setup_requires =
    setuptools
install_requires =
    psycopg2-binary>=2.8
    configservice>=0.0.28
tests_require =
    psycopg2-binary>=2.8
    configservice>=0.0.28
